[package]
name = "timeseries"
version = "0.1.0"
authors = ["Eric Sheppard"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
chrono-tz = "0.5"
thiserror = "1"
rust_decimal = "1.6" # potentially also use BigDecimal and switch between using features
num-traits = "0.2"

[dependencies.resolution]
git = "https://github.com/esheppa/resolution"
rev = "54cb6c5"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dev-dependencies]
anyhow = "1"
env_logger = "0.6"
